// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"   '123 '  " 1`] = `
quoteSingle (1:4 ~ 1:10)
1 | ···'123·'··¶
  |    ^^^^^^
<quoteSingle value="123 " />
`;

exports[`" !!str # comment 1 \\n &anchor # comment 2 \\n  '123'   " 1`] = `
quoteSingle (3:3 ~ 3:8)
1 | ·!!str·#·comment·1·¶
2 | ·&anchor·#·comment·2·¶
3 | ··'123'···¶
  |   ^^^^^
<quoteSingle value="123">
  <handleTag handle="!!" suffix="str" />
  <anchor value="anchor" />
  <middleComment value=" comment 1 ">
  <middleComment value=" comment 2 ">
</quoteSingle>
`;

exports[`" !!str # comment 1 \\n &anchor # comment 2 \\n  '123'   " 2`] = `
comment (1:8 ~ 1:20)
1 | ·!!str·#·comment·1·¶
  |        ^^^^^^^^^^^^
2 | ·&anchor·#·comment·2·¶
3 | ··'123'···¶
<comment value=" comment 1 " />
`;

exports[`" !!str # comment 1 \\n &anchor # comment 2 \\n  '123'   " 3`] = `
comment (2:10 ~ 2:22)
1 | ·!!str·#·comment·1·¶
2 | ·&anchor·#·comment·2·¶
  |          ^^^^^^^^^^^^
3 | ··'123'···¶
<comment value=" comment 2 " />
`;
